# Moirai

./: ALGORITHM_VALIDATION_SUMMARY.md  ARCHITECTURE_REVIEW.md  ASYNC_RUNTIME_IMPLEMENTATION.md  ASYNC_SLEEP_IMPLEMENTATION.md  BUILD_AND_TEST_FIXES_SUMMARY.md  BUILD_AND_TEST_RESOLUTION_FINAL_SUMMARY.md  BUILD_AND_TEST_RESOLUTION_SUMMARY.md  BUILD_ERRORS_RESOLUTION_SUMMARY.md  BUILD_ERROR_FIXES_SUMMARY.md  BUILD_TEST_STATUS.md  CACHE_LOCALITY_IMPROVEMENTS_SUMMARY.md  CHANNEL_BASED_RESULTS_IMPLEMENTATION.md  CHANNEL_BASED_TIMER.md  CHANNEL_POLLING_FIXES.md  CHECKLIST.md  CLEANUP_SUMMARY.md  CODE_QUALITY_IMPROVEMENTS_SUMMARY.md  CODE_REVIEW_FIXES_SUMMARY.md  COMMUNICATION_AND_ITERATOR_IMPROVEMENTS.md  COMPREHENSIVE_EDGE_TESTING_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CPU_OPTIMIZATION_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_ITERATOR_FIXES.md  CRITICAL_SECURITY_FIXES_SUMMARY.md  Cargo.toml  DESIGN_IMPROVEMENTS.md  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_SESSION_SUMMARY.md  DEVELOPMENT_STAGE_SUMMARY.md  DRY_AND_EFFICIENCY_FIXES.md  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  ERROR_HANDLING_IMPROVEMENT_SUMMARY.md  EXECUTOR_FIXES_SUMMARY.md  FINAL_COMMIT_SUMMARY.md  FINAL_CRITICAL_FIXES_SUMMARY.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  (+37 more)
benches/: performance_benchmarks.rs
benchmarks/: Cargo.toml
benchmarks/benches/: industry_comparison.rs  moirai_benchmarks.rs  performance_benchmarks.rs  simd_benchmarks.rs
benchmarks/src/: lib.rs
examples/: async_timer.rs  basic_usage.rs  blocking_channels.rs  iterator_showcase.rs  iterator_showcase_simple.rs  performance_demo.rs  sync_primitives.rs
moirai/: Cargo.toml
moirai-async/: Cargo.toml
moirai-async/src/: lib.rs
moirai-channel/: Cargo.toml
moirai-channel/src/: lib.rs
moirai-core/: Cargo.toml
moirai-core/src/: cache_aligned.rs  channel.rs  communication.rs  coroutine.rs  error.rs  executor.rs  hybrid.rs  improved_pool.rs  improved_scheduler.rs  ipc.rs  lib.rs  metrics.rs  platform.rs  pool.rs  scheduler.rs  security.rs  task.rs  wasm_executor.rs
moirai-core/src/communication/: zero_copy.rs
moirai-executor/: Cargo.toml
moirai-executor/src/: lib.rs
moirai-ipc/: Cargo.toml
moirai-ipc/src/: lib.rs
moirai-iter/: Cargo.toml
moirai-iter/src/: advanced_iterators.rs  base.rs  cache_optimized.rs  channel_fusion.rs  combinators.rs  improved_context.rs  lib.rs  numa_aware.rs  prefetch.rs  simd_iter.rs  windows.rs
moirai-metrics/: Cargo.toml
moirai-metrics/src/: lib.rs
moirai-scheduler/: Cargo.toml
moirai-scheduler/src/: lib.rs  numa_scheduler.rs
moirai-sync/: Cargo.toml
moirai-sync/src/: lib.rs
moirai-transport/: Cargo.toml
moirai-transport/src/: lib.rs  safe_channel.rs  zero_copy.rs
moirai-utils/: Cargo.toml
moirai-utils/src/: lib.rs  simd.rs
moirai/src/: lib.rs
stellaris/: Cargo.toml
stellaris-async/: Cargo.toml
stellaris-channel/: Cargo.toml
stellaris-core/: Cargo.toml
stellaris-executor/: Cargo.toml
stellaris-ipc/: Cargo.toml
stellaris-iter/: Cargo.toml
stellaris-metrics/: Cargo.toml
stellaris-scheduler/: Cargo.toml
stellaris-sync/: Cargo.toml
stellaris-utils/: Cargo.toml
tests/: Cargo.toml  comparison_validation.rs  enhancement_integration_tests.rs  iterator_fixes_test.rs
tests/src/: edge_test_runner.rs  lib.rs  principle_based_edge_tests.rs
