[workspace]
members = [
    "stellaris-core",
    "stellaris-executor",
    "stellaris-scheduler", 
    "stellaris-channel",
    "stellaris-sync",
    "stellaris-async",
    "stellaris-iter",
    "stellaris-ipc",
    "stellaris-metrics",
    "stellaris-utils",
    "stellaris",
    "examples/*",
    "benchmarks",
    "tests"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Stellaris Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/stellaris-rs/stellaris"
homepage = "https://stellaris-rs.github.io"
documentation = "https://docs.rs/stellaris"
keywords = ["concurrency", "async", "parallel", "zero-cost", "performance"]
categories = ["concurrency", "asynchronous"]
rust-version = "1.75.0"

[workspace.dependencies]
# Internal dependencies
stellaris-core = { path = "stellaris-core", version = "0.1.0" }
stellaris-executor = { path = "stellaris-executor", version = "0.1.0" }
stellaris-scheduler = { path = "stellaris-scheduler", version = "0.1.0" }
stellaris-channel = { path = "stellaris-channel", version = "0.1.0" }
stellaris-sync = { path = "stellaris-sync", version = "0.1.0" }
stellaris-async = { path = "stellaris-async", version = "0.1.0" }
stellaris-iter = { path = "stellaris-iter", version = "0.1.0" }
stellaris-ipc = { path = "stellaris-ipc", version = "0.1.0" }
stellaris-metrics = { path = "stellaris-metrics", version = "0.1.0" }
stellaris-utils = { path = "stellaris-utils", version = "0.1.0" }

# External dependencies (stdlib only - these are for dev/test purposes)
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 1
debug = true