[package]
name = "moirai-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Moirai Team"]
description = "Comprehensive benchmarking suite for Moirai concurrency library"
license = "MIT OR Apache-2.0"

[[bench]]
name = "moirai_benchmarks"
harness = false

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
moirai = { path = "../moirai" }
moirai-core = { path = "../moirai-core" }
moirai-utils = { path = "../moirai-utils" }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"