[package]
name = "moirai-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Moirai Contributors"]
description = "Comprehensive performance benchmarks for Moirai concurrency library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moirai-rs/moirai"

[dependencies]
moirai = { path = "../moirai" }
moirai-core = { path = "../moirai-core" }
moirai-executor = { path = "../moirai-executor" }
moirai-scheduler = { path = "../moirai-scheduler" }
moirai-sync = { path = "../moirai-sync" }
moirai-utils = { path = "../moirai-utils" }

# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports"] }

# Comparison libraries
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
crossbeam = "0.8"
num_cpus = "1.16"

# Statistics and analysis
statistical = "1.0"

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"

[[bench]]
name = "industry_comparison"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[features]
default = []
full = ["tokio/full"]