[package]
name = "moirai-async"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Async/await support for Moirai concurrency library"

[dependencies]
moirai-core = { workspace = true }
moirai-executor = { workspace = true }
moirai-channel = { workspace = true }
moirai-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
io = []
timers = []
metrics = ["moirai-core/metrics"]