[package]
name = "moirai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core abstractions and traits for the Moirai concurrency library"

[dependencies]
moirai-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std"]
no-std = []
std = []
numa = []
metrics = ["moirai-utils/metrics"]