[package]
name = "moirai-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Inter-process communication for Moirai concurrency library"

[dependencies]
moirai-core = { workspace = true }
moirai-channel = { workspace = true }
moirai-sync = { workspace = true }
moirai-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
shared-memory = []
named-pipes = []
metrics = ["moirai-core/metrics"]