[package]
name = "moirai-iter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Parallel and async iterator combinators for Moirai concurrency library"

[dependencies]
moirai-core = { workspace = true }
moirai-executor = { workspace = true }
moirai-async = { workspace = true }
moirai-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
async = ["moirai-async"]
metrics = ["moirai-core/metrics"]