[package]
name = "moirai-iter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Parallel and async iterator combinators for Moirai concurrency library"

[dependencies]
moirai-core = { workspace = true }
moirai-executor = { workspace = true }
moirai-async = { workspace = true, optional = true }
moirai-utils = { workspace = true }
moirai-scheduler = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
async = ["moirai-async"]
metrics = ["moirai-core/metrics"]