[package]
name = "moirai-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Synchronization primitives for Moirai concurrency library"

[dependencies]
moirai-core = { workspace = true }
moirai-utils = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
futex = []
metrics = ["moirai-core/metrics"]