[package]
name = "moirai-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Unified transport layer for Moirai concurrency library - seamless communication across threads, processes, and machines"

[dependencies]
moirai-core = { workspace = true }
moirai-scheduler = { workspace = true }
moirai-utils = { workspace = true }
crossbeam-channel = "0.5"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["local"]
local = []  # In-memory and shared memory transports
network = []  # TCP/UDP network transports
distributed = ["network"]  # Full distributed computing support
encryption = []  # Message encryption for secure communication
compression = []  # Message compression for bandwidth optimization
metrics = ["moirai-core/metrics"]