[package]
name = "moirai-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Utility functions and data structures for Moirai concurrency library"

[dependencies]

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
no-std = []
metrics = []
numa = []