[package]
name = "moirai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "High-performance hybrid concurrency library for Rust - weaving the threads of fate"

[dependencies]
moirai-core = { workspace = true }
moirai-executor = { workspace = true }
moirai-scheduler = { workspace = true }
moirai-transport = { workspace = true }
moirai-sync = { workspace = true }
moirai-async = { workspace = true, optional = true }
moirai-iter = { workspace = true, optional = true }
moirai-metrics = { workspace = true, optional = true }
moirai-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[example]]
name = "basic_usage"
path = "../examples/basic_usage.rs"

[[example]]
name = "blocking_channels"
path = "../examples/blocking_channels.rs"

[[example]]
name = "iterator_showcase"
path = "../examples/iterator_showcase.rs"

[[example]]
name = "sync_primitives"
path = "../examples/sync_primitives.rs"

[features]
default = ["async", "iter", "local"]
full = ["async", "iter", "distributed", "metrics", "numa", "futex", "encryption"]
async = ["moirai-async"]
iter = ["moirai-iter"]
local = ["moirai-transport/local"]
network = ["moirai-transport/network"]
distributed = ["moirai-transport/distributed", "network"]
encryption = ["moirai-transport/encryption"]
compression = ["moirai-transport/compression"]
metrics = ["moirai-metrics", "moirai-core/metrics", "moirai-transport/metrics"]
numa = ["moirai-executor/numa", "moirai-scheduler/numa", "moirai-utils/numa"]
futex = ["moirai-sync/futex"]
no-std = ["moirai-core/no-std", "moirai-utils/no-std"]