[package]
name = "stellaris-iter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Parallel and async iterator combinators for Stellaris concurrency library"

[dependencies]
stellaris-core = { workspace = true }
stellaris-executor = { workspace = true }
stellaris-async = { workspace = true }
stellaris-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
async = ["stellaris-async"]
metrics = ["stellaris-core/metrics"]